test/deprecated/fieldValueByNum.good
fieldValueByNum.chpl:5: error: fieldValueByNum deprecated. Use getField
