test/deprecated/fieldValueByNum.chpl
record R {
  var x:int;
}
var r:R;
writeln(fieldValueByNum(r, 1));

